<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="/"
        android:onClick="onOperationClick"
        app:layout_constraintRight_toRightOf="@+id/btn_addition"
        app:layout_constraintBottom_toTopOf="@id/btn_addition"
        />

    <TextView
        android:id="@+id/resultTV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:hint="result"
        android:freezesText="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_clear"
        android:layout_marginBottom="60dp"/>

    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        app:layout_constraintBottom_toTopOf="@+id/btn_two"
        app:layout_constraintRight_toRightOf="@+id/btn_two"
        app:layout_constraintLeft_toLeftOf="@+id/btn_two"
        />
    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        app:layout_constraintRight_toLeftOf="@+id/btn_five"
        app:layout_constraintBottom_toBottomOf="@+id/btn_five"
        app:layout_constraintTop_toTopOf="@+id/btn_five"
        />
    <Button
        android:text="@string/six"
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        app:layout_constraintLeft_toRightOf="@+id/btn_five"
        app:layout_constraintBottom_toBottomOf="@+id/btn_five"
        app:layout_constraintTop_toTopOf="@+id/btn_five"
        />
    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        app:layout_constraintBottom_toTopOf="@+id/btn_five"
        app:layout_constraintRight_toRightOf="@+id/btn_five"
        app:layout_constraintLeft_toLeftOf="@+id/btn_five"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:id="@+id/btn_seven"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        app:layout_constraintRight_toLeftOf="@+id/btn_eight"
        app:layout_constraintBottom_toBottomOf="@+id/btn_eight"
        app:layout_constraintTop_toTopOf="@+id/btn_eight"
        />
    <Button
        android:text="@string/nine"
        android:id="@+id/btn_nine"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_eight"
        app:layout_constraintBottom_toBottomOf="@+id/btn_eight"
        app:layout_constraintTop_toTopOf="@+id/btn_eight"
        />
    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        app:layout_constraintBottom_toTopOf="@+id/btn_zero"
        app:layout_constraintRight_toRightOf="@+id/btn_zero"
        app:layout_constraintLeft_toLeftOf="@+id/btn_zero"
        />
    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        app:layout_constraintRight_toLeftOf="@+id/btn_two"
        app:layout_constraintBottom_toBottomOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_two"
        />
    <Button
        android:text="@string/three"
        android:id="@+id/btn_three"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_two"
        app:layout_constraintBottom_toBottomOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_two"
        />
    <Button
        android:id="@+id/btn_zero"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        app:layout_constraintLeft_toLeftOf="@+id/btn_one"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/btn_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textSize="40sp"
        android:onClick="onNumberClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/btn_three"

        />
    <Button
        android:text="@string/equal"
        android:id="@+id/btn_equal"
        android:textSize="40sp"
        android:onClick="onOperationClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/btn_subtraction"
        app:layout_constraintBottom_toBottomOf="@+id/btn_zero"
        app:layout_constraintTop_toTopOf="@+id/btn_zero"
        />
    <Button
        android:id="@+id/btn_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        android:textSize="40sp"
        android:onClick="onOperationClick"
        app:layout_constraintLeft_toRightOf="@+id/btn_nine"
        app:layout_constraintBottom_toBottomOf="@+id/btn_nine"
        app:layout_constraintTop_toTopOf="@+id/btn_nine"
        />
    <Button
        android:id="@+id/btn_subtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtraction"
        android:textSize="40sp"
        android:onClick="onOperationClick"
        app:layout_constraintLeft_toRightOf="@+id/btn_three"
        app:layout_constraintBottom_toBottomOf="@+id/btn_three"
        app:layout_constraintTop_toTopOf="@+id/btn_three"
        />
    <Button
        android:text="@string/multiply"
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:onClick="onOperationClick"
        app:layout_constraintLeft_toRightOf="@+id/btn_six"
        app:layout_constraintBottom_toBottomOf="@+id/btn_six"
        app:layout_constraintTop_toTopOf="@+id/btn_six"
        />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="40sp"
        android:id="@+id/btn_clear"
        android:onClick="onNumberClick"
        app:layout_constraintBottom_toTopOf="@+id/btn_seven"
        app:layout_constraintLeft_toLeftOf="@+id/btn_eight"
        app:layout_constraintRight_toRightOf="@+id/btn_seven"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="%"
        android:textSize="40sp"
        android:id="@+id/btn_procent"
        android:onClick="onNumberClick"
        app:layout_constraintBottom_toTopOf="@+id/btn_nine"
        app:layout_constraintLeft_toLeftOf="@+id/btn_nine"
        app:layout_constraintRight_toRightOf="@+id/btn_nine"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:textSize="30sp"
        android:onClick="onClickSave"
        android:background="@color/colorPrimary"
        android:id="@+id/btn_next_activity"
        app:layout_constraintBottom_toTopOf="@+id/btn_divide"
        app:layout_constraintRight_toRightOf="@+id/btn_divide"
        />



</androidx.constraintlayout.widget.ConstraintLayout>